--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
    
 	<script src="scripts/js/libraries/jquery-1.11.2.min.js"></script>
+    <script src="scripts/js/libraries/jquery.animateRotate.js"></script>
 	<script src="scripts/js/libraries/modernizr.custom.51672.js"></script>
 	<!--<script src="scripts/js/script.js"></script>-->
 	<script src="scripts/components/js/snow.js"></script>
